
### WARNING:
### WARNING: This version is currently NOT for production use!
### WARNING:

Temporary Problems:
===================

 * Migration to Ruby 1.9 and Rails 3.2, WIP

 * hidden projects are not always hidden atm

 * No gui interface for managing users and groups. api
   routes have to be enhanced and webui needs to get support 
   for using it.



Changes on purpose for 2.4:
===========================

Changes
=======

* Requests do require a description now in any case

* database driver needs to be changed to "mysql2" in /srv/www/obs/api/config/database.yml

* webui configurations got moved from environments/*.rb to config/options.yml.
  TODO: import config settings on update
