@@ -19,6 +19,8 @@ Temporary Problems:
 Changes on purpose for 2.4:
 ===========================
 
+ * package meta of package copy command is not coping relationships and devel definitions anymore
+
 Changes
 =======
 
